# pydes

./: README.md  bit_helpers.py  des_const.py  pydes.py  pyproject.toml
